--- a/css/Basic/1_selector.css
+++ b/css/Basic/1_selector.css
@@ -2,35 +2,40 @@ p{
     color:yellow;
     background-color: blue;
 }
-
-
-
 /*Class Selector*/
 .cls{
     color:rgb(30, 255, 0);
     background-color: rgb(255, 225, 0);
 }
-
 /*Id Selector*/
 #ide{
     color:rgb(216, 171, 222);
     background-color: rgb(255, 123, 0);
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* attribute selector */
 a[href="abc.com"] {
     color: blue;
     background-color: rgb(109, 109, 27);
 }
-
 a[href="xyz.id"] {
     color: green;
-    background-color:gray;
+    background-color:gray;-
 }
-
-
-
-
 /* grouping selector */
 b,i,u{
     color: lightpink;
@@ -42,11 +47,6 @@ header h3, header p {
     color: maroon;
     background-color: yellowgreen;
 }
-
-
-
-
-
 /* child selector */
 article > p {
     color: red;
@@ -59,7 +59,7 @@ article > main > p {
 }
 
 /* adjacent selector */
-h6+small+small+small{
+h6+small{
     color: gold;
     background-color: indigo;
 }
